--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,21 +23,5 @@ jobs:
           flake8 src --count --max-complexity=10 --max-line-length=127 --statistics
       - name: Run unit tests with nose
         run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
-      - name: CodeQL Analysis
-        uses: github/codeql-action@v1
-        with:
-          languages: python
-      - name: Generate Documentation
-        run: |
-          pip install -r doc-requirements.txt
-          sphinx-build -b html docs/ docs/_build
-        if: success()
-      - name: Dependency Security Scanning
-        uses: github/code-scanning-action@v1
-        with:
-          scan-id: 'dependency-scanning'
-          # Additional configuration options can be added as needed
-      - name: Build and Deploy
-        run: |
-          # Add your deployment script here
-        if: success()      
+      - name: Generate documentation with pydoc
+        run: pydoc -w src/*.py
